--- a/argocd/install/gitea/kustomize/overlays/appliance/kustomization.yaml
+++ b/argocd/install/gitea/kustomize/overlays/appliance/kustomization.yaml
@@ -4,6 +4,49 @@ namespace: gitea
 resources:
 - ../../base
 
+patches:
+# Patch provides custom crucible-ca.pem root certificate so that 
+# containers and files can be pulled from the gitea server
+- patch: |-
+    apiVersion: apps/v1
+    kind: StatefulSet
+    metadata:
+      name: appliance-gitea-act-runner
+    spec:
+      template:
+        spec:
+          volumes:
+          - name: crucible-ssl-vol
+            secret:
+              secretName: gitea-tls
+              items:
+              - key: ca.crt
+                path: crucible-ca.crt
+          containers:
+            - name: act-runner
+              command: 
+              - /sbin/tini
+              - --
+              - /opt/act/run.sh
+              args:
+              - update-ca-certificates  
+              volumeMounts:
+                - name: crucible-ssl-vol
+                  mountPath: /usr/local/share/ca-certificates/crucible-ca.crt
+                  subPath: crucible-ca.crt
+            
+            - name: dind
+              command: 
+              - sh
+              - -c
+              - > 
+                update-ca-certificates && dockerd-entrypoint.sh
+              volumeMounts:
+                - name: crucible-ssl-vol
+                  mountPath: /usr/local/share/ca-certificates/crucible-ca.crt
+                  subPath: crucible-ca.crt
+
+      
   
 
 
