--- a/appliance.example.yaml
+++ b/appliance.example.yaml
@@ -4,11 +4,13 @@ vars:
   vsphere_user:
   vsphere_password:
   vsphere_template:
-  datacenter:
-  cluster:
-  host:
-  datastore:
-  network_name:
+  vsphere_datacenter:
+  vsphere_cluster:
+  vsphere_host:
+  vsphere_datastore:
+  vsphere_iso_datastore:
+  vsphere_switch: 
+  vsphere_portgroup:
   ssh_username:
   ssh_password:
 apps:
