--- a/appliance.example.yaml
+++ b/appliance.example.yaml
@@ -1,6 +1,6 @@
 vars:
-  domain: crucible.io
-  vsphere_server: vcsa.crucible.io
+  domain: onprem.imcite-phl.net
+  vsphere_server: vcsa.onprem.imcite-phl.net
   vsphere_user: administrator@vsphere.local
   vsphere_password:
   vsphere_template:
