--- a/argocd/apps/prod-k8s/1-applications/keycloak/Application.yaml
+++ b/argocd/apps/prod-k8s/1-applications/keycloak/Application.yaml
@@ -17,6 +17,6 @@ spec:
     - CreateNamespace=true
   source:
     path: argocd/apps/keycloak/kustomize/overlays/appliance
-    repoURL: https://crucible.io/gitea/fortress-manifests/crucible-appliance.git
+    repoURL: https://onprem.imcite-phl.net/gitea/fortress-manifests/crucible-appliance.git
     targetRevision: main
 
