--- a/argocd/apps/prod-k8s/1-applications/player-connect.ingress.yaml
+++ b/argocd/apps/prod-k8s/1-applications/player-connect.ingress.yaml
@@ -37,7 +37,7 @@ metadata:
   namespace: default
 spec:
   rules:
-  - host: onprem.imcite-phl.net
+  - host: onprem.phl-imcite.net
     http:
       paths:
       - backend:
