--- a/.github/workflows/packer-builder.yaml
+++ b/.github/workflows/packer-builder.yaml
@@ -6,10 +6,10 @@ jobs:
   login:
     runs-on: crucible
     steps:
-      - name: Login to onprem.imcite-phl.net registry
+      - name: Login to onprem.phl-imcite.net registry
         uses: docker/login-action@v3
         with:
-          registry: onprem.imcite-phl.net
+          registry: onprem.phl-imcite.net
           username: ${{ githu.actor }}
           password: crucible
       
