--- a/argocd/install/argocd/kustomize/overlays/appliance/kustomization.yaml
+++ b/argocd/install/argocd/kustomize/overlays/appliance/kustomization.yaml
@@ -88,7 +88,7 @@ secretGenerator:
   literals:
   - AVP_TYPE=vault
   - AVP_AUTH_TYPE=approle
-  - VAULT_ADDR=https://keystore.onprem.imcite-phl.net
+  - VAULT_ADDR=https://keystore.onprem.phl-imcite.net
   files:
   - AVP_ROLE_ID=files/argo-role-id
   - AVP_SECRET_ID=files/argo-secret-id
