Generic repo-sync commit, see diff

--- a/argocd/apps/prod-argo/apps/0-base-env.yaml
+++ b/argocd/apps/prod-argo/apps/0-base-env.yaml
@@ -8,8 +8,8 @@ metadata:
 spec:
   generators:
   - git:
-      repoURL: https://github.com/sei-noconnor/crucible-appliance.git
-      revision: HEAD
+      repoURL: https://onprem.phl-imcite.net/gitea/fortress-manifests/crucible-appliance.git
+      revision: domain-change
       files:
       - path: "argocd/apps/prod-argo/apps/0-base/*.json"
   template:
@@ -18,8 +18,8 @@ spec:
     spec:
       project: default
       source:
-        repoURL: https://github.com/sei-noconnor/crucible-appliance.git
-        targetRevision: main
+        repoURL: https://onprem.phl-imcite.net/gitea/fortress-manifests/crucible-appliance.git
+        targetRevision: domain-change
         path: "argocd/apps/prod-k8s/0-base"
         plugin:
           name: argocd-vault-plugin
