--- a/argocd/apps/prod-argo/apps/1-applications/blueprint.config.json
+++ b/argocd/apps/prod-argo/apps/1-applications/blueprint.config.json
@@ -1,7 +1,7 @@
 {
     "app": {
         "project_name" : "blueprint",
-        "project_branch" : "HEAD",
+        "project_branch" : "domain-change",
         "namespace" : "default",
         "manifest_type": "helm",
         "helm_repo" : "https://helm.cmusei.dev/charts",
