--- a/argocd/apps/prod-argo/apps/1-applications/mkdocs.config.json
+++ b/argocd/apps/prod-argo/apps/1-applications/mkdocs.config.json
@@ -1,7 +1,7 @@
 {
     "app": {
         "project_name" : "mkdocs",
-        "project_branch" : "main",
+        "project_branch" : "domain-change",
         "namespace" : "default",
         "manifest_type": "kustomize",
         "helm_repo" : "https://helm.cmusei.dev/charts",
