--- a/argocd/apps/prod-k8s/1-applications/keycloak/Application.yaml
+++ b/argocd/apps/prod-k8s/1-applications/keycloak/Application.yaml
@@ -18,5 +18,5 @@ spec:
   source:
     path: argocd/apps/keycloak/kustomize/overlays/appliance
     repoURL: https://onprem.phl-imcite.net/gitea/fortress-manifests/crucible-appliance.git
-    targetRevision: main
+    targetRevision: domain-change
 
