--- a/argocd/install/cert-manager/Application.yaml
+++ b/argocd/install/cert-manager/Application.yaml
@@ -17,11 +17,11 @@ spec:
     - CreateNamespace=true
   sources:
   - path: argocd/install/cert-manager/manifests
-    repoURL: file:///crucible-repo/crucible-appliance
-    targetRevision: main
+    repoURL: https://onprem.phl-imcite.net/gitea/fortress-manifests/crucible-appliance.git
+    targetRevision: domain-change
     directory:
       recurse: true
   - path: argocd/install/cert-manager/kustomize/overlays/appliance
-    repoURL: file:///crucible-repo/crucible-appliance/
-    targetRevision: main
+    repoURL: https://onprem.phl-imcite.net/gitea/fortress-manifests/crucible-appliance.git/
+    targetRevision: domain-change
 
