--- a/argocd/install/postgres/Application.yaml
+++ b/argocd/install/postgres/Application.yaml
@@ -17,6 +17,6 @@ spec:
     - CreateNamespace=true
   source:
     path: argocd/install/postgres/kustomize/overlays/appliance
-    repoURL: file:///crucible-repo/crucible-appliance
-    targetRevision: main
+    repoURL: https://onprem.phl-imcite.net/gitea/fortress-manifests/crucible-appliance.git
+    targetRevision: domain-change
 
